Nov 12, 2021
  added loading of scaffolds; implemented parallel loading

Nov 11, 2021
  added loading of data from UCSC synteny chain net files

May 10, 2020
  updated jar dependencies

v. 1.0.0, Sep 11, 2019
  -first pipeline version, generate synteny blocks for all species