@@ -20,15 +20,15 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
-    compile 'commons-net:commons-net:3.6'
-    compile 'org.apache.httpcomponents:httpclient:4.5.12'
-    compile 'log4j:log4j:1.2.17'
-    compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.2.8.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.8.RELEASE'
+    implementation 'org.apache.commons:commons-dbcp2:2.8.0'
+    implementation 'commons-net:commons-net:3.7'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'log4j:log4j:1.2.17'
+    implementation 'com.oracle.ojdbc:ojdbc8:19.6.0.0'
+    implementation 'org.springframework:spring-beans:5.3.0'
+    implementation 'org.springframework:spring-jdbc:5.3.0'
 
-    compile fileTree(dir: 'lib', include: '*.jar')
+    implementation fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
@@ -38,7 +38,7 @@ jar {
             'Built-By': System.getProperty('user.name'),
             'Built-Date': new Date(),
             'Built-JDK': System.getProperty('java.version'),
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
             'Main-Class': mainClassName
         )
     }
@@ -46,7 +46,7 @@ jar {
 
 distributions {
     main {
-        baseName = myAppName
+        distributionBaseName = myAppName
     }
 }
 
