@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
     <bean id="manager" class="edu.mcw.rgd.Manager">
-        <property name="version" value="--Synteny Load pipeline -- build May 10, 2020 --" />
+        <property name="version" value="--Synteny Load pipeline -- build Jan 27, 2023 --" />
         <property name="pipelineName" value="Synteny Load Pipeline" />
         <property name="assemblies" >
             <list>
