@@ -1,3 +1,6 @@
+Jan 27, 2023
+  updated build.gradle to be gradle 6.x + compatible
+
 Nov 12, 2021
   added loading of scaffolds; implemented parallel loading
 
